<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_atenciones"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_atenciones" />

    <item
        android:id="@+id/navigation_pago"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_pago" />

    <item
        android:id="@+id/navigation_reporte"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_reporte" />

    <item
        android:id="@+id/navigation_reclamos"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_reclamos" />

    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_menu" />
</menu>
